--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            Curiosidades de Tecnologia
+            Surgimento do android
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
@@ -19,7 +19,6 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale Conosco</a>
     </nav>
