--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como surgio o mascote android</title>
+    <title>Surgimento do android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
         <h1>
-            Surgimento do android
+            Curiosidades de tectonologia
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
