--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            Curiosidades de tectonologia
+            Curiosidades de tecnologia
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
