--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </p>
 
-            <picture>
-                <source media="(max-width: )" srcset="">
-                <video src=""></video>
-            </picture>
+            <div class='dinheiro'>
+                <video src="imagens/ENFRENTE_AS_DIFICULDADES_DA_VIDA_-_VÍDEO_MOTIVACIONAL(720p).mp4" controls ></video>
+            </div>
+        
             <aside>
                <h3>Quer aprender mais?</h3> 
 
