--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
 
             <picture class="blo">
-                <source media="(max-width: 587px)" srcset="imagens/dan-droids-pq.png">
+                <source media="(max-width: 510px)" srcset="imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="">
             </picture>
 
@@ -46,7 +46,7 @@
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
             <picture>
-                <source media="(max-width:587px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+                <source media="(max-width:510px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
                 <img src="imagens/irina-blok.jpg" alt="Foto da irina blok">
             </picture>
             <p>
@@ -60,7 +60,7 @@
             </p>
 
             <div class='dinheiro'>
-                <video src="imagens/ENFRENTE_AS_DIFICULDADES_DA_VIDA_-_VÍDEO_MOTIVACIONAL(720p).mp4" controls></video>
+                <video src="imagens/ENFRENTE_AS_DIFICULDADES_DA_VIDA_-_VÍDEO_MOTIVACIONAL(720p).mp4" controls poster="imagens/cara.jpg"></video>
             </div>
         
             <aside>
