--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </p>
 
             <div class='dinheiro'>
-                <video src="imagens/ENFRENTE_AS_DIFICULDADES_DA_VIDA_-_VÍDEO_MOTIVACIONAL(720p).mp4" controls autoplay></video>
+                <video src="imagens/adolecente.mp4" controls></video>
             </div>
         
             <aside>
